--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,12 @@ doctype html
 html
   head
     title= title
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+
+    script(src='/jquery.slim.min.js')
+    script(src='/popper.min.js')
+    script(src='/js/bootstrap.min.js')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
